# GameEngineFromZero

./: .gitignore  .gitmodules  CmakeLists.txt  README.md  build_crossguid.bat  build_libpng.bat  build_opengex.bat  build_zlib.bat  log  main.c
Asset/Shaders/: basic.ps  basic.vs  basic_ps.glsl  basic_vs.glsl  color.ps  color.vs  copy.vs
Empty/: EmptyApplication.cpp
Framework/Codec/: BMP.hpp  ImageParser.hpp
Framework/Common/: Allocator.cpp  Allocator.hpp  AssetLoader.cpp  AssetLoader.hpp  BaseApplication.cpp  BaseApplication.hpp  Buffer.hpp  CmakeLists.txt  ColorSpaceConversion.hpp  GfxConfiguration.h  GrahphicsManager.hpp  GraphicsManager.cpp  Image.cpp  Image.hpp  MemoryManager.cpp  MemoryManager.hpp  Scene.cpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp  SceneNode.hpp  SceneObject.cpp  SceneObject.hpp  SceneParser.cpp  cbuffer.h  main.cpp  portable.hpp  utility.hpp  vectormath.h
Framework/Common/test/: CMakeLists.txt  SceneObjectTest.cpp
Framework/GeomMath/: CMakeLists.txt  geommath.hpp
Framework/GeomMath/include/: AddByElement.h  CrossProduct.h  DCT.h  DotProduct.h  InverseMatrix4x4f.h  MatrixExchangeYandZ.h  MulByElement.h  Normalize.h  SubByElement.h  Transform.h  Transpose.h
Framework/GeomMath/ispc/: CMakeLists.txt  MulByElement.ispc
Framework/Interface/: IApplication.hpp  IRuntimeModule.hpp  ImageParser.hpp  SceneParser.hpp
Framework/Parser/: BMP.hpp  JPEG.hpp  OGEX.hpp
Platform/: CMakeLists.txt
Platform/Empty/: EmptyApplication.cpp  EmptyApplication.hpp
Platform/Windows/: CMakeLists.txt  D3d12Application.cpp  Mesh.h  OpenGLApplication.cpp  OpenGLApplication.hpp  README.md  WindowsApplication.cpp  WindowsApplication.hpp  color.ps  d3dx12.h  helloengine_d2d.cpp  helloengine_d3d.cpp  helloengine_d3d12.cpp  helloengine_gl.cpp  helloengine_win.c
Platform/Windows/test/: CMakeLists.txt  TextureLoadTest.cpp
RHI/: CmakeLists.txt
RHI/D2d/: D2dGraphicsManager.cpp  D2dGraphicsManager.hpp
RHI/D3d/: CmakeLists.txt  D3d12GraphicsManager.cpp  D3d12GraphicsManager.hpp
RHI/OpenGL/: CMakeLists.txt  OpenGLGraphicsManager.cpp  OpenGLGraphicsManager.hpp
Test/: CMakeLists.txt  ColorSpaceConversionTest.cpp  GeomMathTest.cpp  JpegParserTest.cpp  OgexParserTest.cpp  SceneObjectTest.cpp
cmake/: PlatformDependencies.cmake
